--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
   <string name="play_fast">Play Fast</string>
   <string name="pause">Pause</string>
   <string name="reset">Reset</string>
-  <string name="wins_format">Wins: %d</string>
-  <string name="losses_format">Losses: %d</string>
+  <string name="wins_format">Wins: %,d</string>
+  <string name="losses_format">Losses: %,d</string>
   <string name="percentage_format">%.2f%%</string>
 </resources>
